// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser - Contracts should parse contract fullfillment 1`] = `
{
  "body": [
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 19,
                "line": 2,
              },
              "start": {
                "column": 14,
                "line": 2,
              },
            },
            "value": "Point",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "start": {
              "column": 14,
              "line": 2,
            },
          },
          "value": "Point",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "ContractType",
        "members": [
          {
            "isNominal": false,
            "kind": "FunctionType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": false,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 24,
                    "line": 3,
                  },
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "value": "setPoint",
              },
              "parameters": [
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 26,
                        "line": 3,
                      },
                      "start": {
                        "column": 25,
                        "line": 3,
                      },
                    },
                    "value": "x",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 33,
                          "line": 3,
                        },
                        "start": {
                          "column": 27,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 36,
                        "line": 3,
                      },
                      "start": {
                        "column": 35,
                        "line": 3,
                      },
                    },
                    "value": "y",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 43,
                          "line": 3,
                        },
                        "start": {
                          "column": 37,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
              ],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 52,
                      "line": 3,
                    },
                    "start": {
                      "column": 48,
                      "line": 3,
                    },
                  },
                  "value": "void",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 4,
                  },
                  "start": {
                    "column": 17,
                    "line": 4,
                  },
                },
                "value": "x",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 28,
                      "line": 4,
                    },
                    "start": {
                      "column": 22,
                      "line": 4,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 5,
                  },
                  "start": {
                    "column": 17,
                    "line": 5,
                  },
                },
                "value": "y",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 28,
                      "line": 5,
                    },
                    "start": {
                      "column": 22,
                      "line": 5,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
        ],
      },
    },
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 21,
                "line": 8,
              },
              "start": {
                "column": 14,
                "line": 8,
              },
            },
            "value": "Point3D",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 21,
              "line": 8,
            },
            "start": {
              "column": 14,
              "line": 8,
            },
          },
          "value": "Point3D",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "StructType",
        "members": [
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 9,
                },
                "start": {
                  "column": 13,
                  "line": 9,
                },
              },
              "value": "x",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 9,
                  },
                  "start": {
                    "column": 16,
                    "line": 9,
                  },
                },
                "value": "number",
              },
            },
          },
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 10,
                },
                "start": {
                  "column": 13,
                  "line": 10,
                },
              },
              "value": "y",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 10,
                  },
                  "start": {
                    "column": 16,
                    "line": 10,
                  },
                },
                "value": "number",
              },
            },
          },
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 11,
                },
                "start": {
                  "column": 13,
                  "line": 11,
                },
              },
              "value": "z",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 11,
                  },
                  "start": {
                    "column": 16,
                    "line": 11,
                  },
                },
                "value": "number",
              },
            },
          },
        ],
      },
    },
    {
      "contract": {
        "position": {
          "end": {
            "column": 22,
            "line": 14,
          },
          "start": {
            "column": 17,
            "line": 14,
          },
        },
        "value": "Point",
      },
      "for": {
        "position": {
          "end": {
            "column": 34,
            "line": 14,
          },
          "start": {
            "column": 27,
            "line": 14,
          },
        },
        "value": "Point3D",
      },
      "kind": "ContractFulfillment",
      "members": [
        {
          "body": [
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 21,
                        "line": 16,
                      },
                      "start": {
                        "column": 17,
                        "line": 16,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 16,
                      },
                      "start": {
                        "column": 22,
                        "line": 16,
                      },
                    },
                    "value": "x",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 27,
                      "line": 16,
                    },
                    "start": {
                      "column": 26,
                      "line": 16,
                    },
                  },
                  "value": "x",
                },
              },
            },
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 21,
                        "line": 17,
                      },
                      "start": {
                        "column": 17,
                        "line": 17,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 17,
                      },
                      "start": {
                        "column": 22,
                        "line": 17,
                      },
                    },
                    "value": "y",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 27,
                      "line": 17,
                    },
                    "start": {
                      "column": 26,
                      "line": 17,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": false,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 24,
                  "line": 15,
                },
                "start": {
                  "column": 16,
                  "line": 15,
                },
              },
              "value": "setPoint",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 29,
                      "line": 15,
                    },
                    "start": {
                      "column": 25,
                      "line": 15,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 32,
                      "line": 15,
                    },
                    "start": {
                      "column": 31,
                      "line": 15,
                    },
                  },
                  "value": "x",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 39,
                        "line": 15,
                      },
                      "start": {
                        "column": 33,
                        "line": 15,
                      },
                    },
                    "value": "number",
                  },
                },
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 42,
                      "line": 15,
                    },
                    "start": {
                      "column": 41,
                      "line": 15,
                    },
                  },
                  "value": "y",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 49,
                        "line": 15,
                      },
                      "start": {
                        "column": 43,
                        "line": 15,
                      },
                    },
                    "value": "number",
                  },
                },
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 58,
                    "line": 15,
                  },
                  "start": {
                    "column": 54,
                    "line": 15,
                  },
                },
                "value": "void",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 20,
                    },
                    "start": {
                      "column": 17,
                      "line": 20,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 20,
                    },
                    "start": {
                      "column": 22,
                      "line": 20,
                    },
                  },
                  "value": "x",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 18,
                  "line": 19,
                },
                "start": {
                  "column": 17,
                  "line": 19,
                },
              },
              "value": "x",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 19,
                    },
                    "start": {
                      "column": 19,
                      "line": 19,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 34,
                    "line": 19,
                  },
                  "start": {
                    "column": 28,
                    "line": 19,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 23,
                    },
                    "start": {
                      "column": 17,
                      "line": 23,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 23,
                    },
                    "start": {
                      "column": 22,
                      "line": 23,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 18,
                  "line": 22,
                },
                "start": {
                  "column": 17,
                  "line": 22,
                },
              },
              "value": "y",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 22,
                    },
                    "start": {
                      "column": 19,
                      "line": 22,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 34,
                    "line": 22,
                  },
                  "start": {
                    "column": 28,
                    "line": 22,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
      ],
      "typeArgs": undefined,
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Contracts should parse contract fullfillment with generic parameters 1`] = `
{
  "body": [
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "isNominal": true,
        "kind": "GenericType",
        "name": {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
            },
            "start": {
              "column": 13,
              "line": 2,
            },
          },
          "value": "Point",
        },
        "parameters": [
          {
            "constraint": undefined,
            "kind": "TypeParameter",
            "name": {
              "position": {
                "end": {
                  "column": 20,
                  "line": 2,
                },
                "start": {
                  "column": 19,
                  "line": 2,
                },
              },
              "value": "T",
            },
          },
        ],
      },
      "type": {
        "isNominal": true,
        "kind": "ContractType",
        "members": [
          {
            "isNominal": false,
            "kind": "FunctionType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": false,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 24,
                    "line": 3,
                  },
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "value": "setPoint",
              },
              "parameters": [
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 26,
                        "line": 3,
                      },
                      "start": {
                        "column": 25,
                        "line": 3,
                      },
                    },
                    "value": "x",
                  },
                  "type": {
                    "actualType": {
                      "kind": "PrimitiveType",
                      "name": {
                        "position": {
                          "end": {
                            "column": 28,
                            "line": 3,
                          },
                          "start": {
                            "column": 27,
                            "line": 3,
                          },
                        },
                        "value": "T",
                      },
                    },
                    "kind": "AliasType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 28,
                          "line": 3,
                        },
                        "start": {
                          "column": 27,
                          "line": 3,
                        },
                      },
                      "value": "T",
                    },
                  },
                },
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 31,
                        "line": 3,
                      },
                      "start": {
                        "column": 30,
                        "line": 3,
                      },
                    },
                    "value": "y",
                  },
                  "type": {
                    "actualType": {
                      "kind": "PrimitiveType",
                      "name": {
                        "position": {
                          "end": {
                            "column": 33,
                            "line": 3,
                          },
                          "start": {
                            "column": 32,
                            "line": 3,
                          },
                        },
                        "value": "T",
                      },
                    },
                    "kind": "AliasType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 33,
                          "line": 3,
                        },
                        "start": {
                          "column": 32,
                          "line": 3,
                        },
                      },
                      "value": "T",
                    },
                  },
                },
              ],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 42,
                      "line": 3,
                    },
                    "start": {
                      "column": 38,
                      "line": 3,
                    },
                  },
                  "value": "void",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 4,
                  },
                  "start": {
                    "column": 17,
                    "line": 4,
                  },
                },
                "value": "x",
              },
              "parameters": [],
              "returnType": {
                "actualType": {
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 4,
                      },
                      "start": {
                        "column": 22,
                        "line": 4,
                      },
                    },
                    "value": "T",
                  },
                },
                "kind": "AliasType",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 4,
                    },
                    "start": {
                      "column": 22,
                      "line": 4,
                    },
                  },
                  "value": "T",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 5,
                  },
                  "start": {
                    "column": 17,
                    "line": 5,
                  },
                },
                "value": "y",
              },
              "parameters": [],
              "returnType": {
                "actualType": {
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 5,
                      },
                      "start": {
                        "column": 22,
                        "line": 5,
                      },
                    },
                    "value": "T",
                  },
                },
                "kind": "AliasType",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 5,
                    },
                    "start": {
                      "column": 22,
                      "line": 5,
                    },
                  },
                  "value": "T",
                },
              },
              "typeParameters": undefined,
            },
          },
        ],
      },
    },
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 21,
                "line": 8,
              },
              "start": {
                "column": 14,
                "line": 8,
              },
            },
            "value": "Point3D",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 21,
              "line": 8,
            },
            "start": {
              "column": 14,
              "line": 8,
            },
          },
          "value": "Point3D",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "StructType",
        "members": [
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 9,
                },
                "start": {
                  "column": 13,
                  "line": 9,
                },
              },
              "value": "x",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 9,
                  },
                  "start": {
                    "column": 16,
                    "line": 9,
                  },
                },
                "value": "number",
              },
            },
          },
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 10,
                },
                "start": {
                  "column": 13,
                  "line": 10,
                },
              },
              "value": "y",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 10,
                  },
                  "start": {
                    "column": 16,
                    "line": 10,
                  },
                },
                "value": "number",
              },
            },
          },
          {
            "isNominal": false,
            "kind": "StructMember",
            "name": {
              "position": {
                "end": {
                  "column": 14,
                  "line": 11,
                },
                "start": {
                  "column": 13,
                  "line": 11,
                },
              },
              "value": "z",
            },
            "optional": false,
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 22,
                    "line": 11,
                  },
                  "start": {
                    "column": 16,
                    "line": 11,
                  },
                },
                "value": "number",
              },
            },
          },
        ],
      },
    },
    {
      "contract": {
        "position": {
          "end": {
            "column": 22,
            "line": 14,
          },
          "start": {
            "column": 17,
            "line": 14,
          },
        },
        "value": "Point",
      },
      "for": {
        "position": {
          "end": {
            "column": 42,
            "line": 14,
          },
          "start": {
            "column": 35,
            "line": 14,
          },
        },
        "value": "Point3D",
      },
      "kind": "ContractFulfillment",
      "members": [
        {
          "body": [
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 21,
                        "line": 16,
                      },
                      "start": {
                        "column": 17,
                        "line": 16,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 16,
                      },
                      "start": {
                        "column": 22,
                        "line": 16,
                      },
                    },
                    "value": "x",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 27,
                      "line": 16,
                    },
                    "start": {
                      "column": 26,
                      "line": 16,
                    },
                  },
                  "value": "x",
                },
              },
            },
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 21,
                        "line": 17,
                      },
                      "start": {
                        "column": 17,
                        "line": 17,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 23,
                        "line": 17,
                      },
                      "start": {
                        "column": 22,
                        "line": 17,
                      },
                    },
                    "value": "y",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 27,
                      "line": 17,
                    },
                    "start": {
                      "column": 26,
                      "line": 17,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": false,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 24,
                  "line": 15,
                },
                "start": {
                  "column": 16,
                  "line": 15,
                },
              },
              "value": "setPoint",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 29,
                      "line": 15,
                    },
                    "start": {
                      "column": 25,
                      "line": 15,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 32,
                      "line": 15,
                    },
                    "start": {
                      "column": 31,
                      "line": 15,
                    },
                  },
                  "value": "x",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 39,
                        "line": 15,
                      },
                      "start": {
                        "column": 33,
                        "line": 15,
                      },
                    },
                    "value": "number",
                  },
                },
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 42,
                      "line": 15,
                    },
                    "start": {
                      "column": 41,
                      "line": 15,
                    },
                  },
                  "value": "y",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 49,
                        "line": 15,
                      },
                      "start": {
                        "column": 43,
                        "line": 15,
                      },
                    },
                    "value": "number",
                  },
                },
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 58,
                    "line": 15,
                  },
                  "start": {
                    "column": 54,
                    "line": 15,
                  },
                },
                "value": "void",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 20,
                    },
                    "start": {
                      "column": 17,
                      "line": 20,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 20,
                    },
                    "start": {
                      "column": 22,
                      "line": 20,
                    },
                  },
                  "value": "x",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 18,
                  "line": 19,
                },
                "start": {
                  "column": 17,
                  "line": 19,
                },
              },
              "value": "x",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 19,
                    },
                    "start": {
                      "column": 19,
                      "line": 19,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 34,
                    "line": 19,
                  },
                  "start": {
                    "column": 28,
                    "line": 19,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 23,
                    },
                    "start": {
                      "column": 17,
                      "line": 23,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 23,
                    },
                    "start": {
                      "column": 22,
                      "line": 23,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 18,
                  "line": 22,
                },
                "start": {
                  "column": 17,
                  "line": 22,
                },
              },
              "value": "y",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 22,
                    },
                    "start": {
                      "column": 19,
                      "line": 22,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 34,
                    "line": 22,
                  },
                  "start": {
                    "column": 28,
                    "line": 22,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
      ],
      "typeArgs": [
        {
          "isNominal": true,
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 29,
                "line": 14,
              },
              "start": {
                "column": 23,
                "line": 14,
              },
            },
            "value": "number",
          },
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Contracts should parse contract fullfillment with indented body 1`] = `
{
  "body": [
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 11,
                "line": 2,
              },
              "start": {
                "column": 6,
                "line": 2,
              },
            },
            "value": "Point",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 11,
              "line": 2,
            },
            "start": {
              "column": 6,
              "line": 2,
            },
          },
          "value": "Point",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "ContractType",
        "members": [
          {
            "isNominal": false,
            "kind": "FunctionType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": false,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 16,
                    "line": 3,
                  },
                  "start": {
                    "column": 8,
                    "line": 3,
                  },
                },
                "value": "setPoint",
              },
              "parameters": [
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 18,
                        "line": 3,
                      },
                      "start": {
                        "column": 17,
                        "line": 3,
                      },
                    },
                    "value": "x",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 25,
                          "line": 3,
                        },
                        "start": {
                          "column": 19,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 28,
                        "line": 3,
                      },
                      "start": {
                        "column": 27,
                        "line": 3,
                      },
                    },
                    "value": "y",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 35,
                          "line": 3,
                        },
                        "start": {
                          "column": 29,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
              ],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 44,
                      "line": 3,
                    },
                    "start": {
                      "column": 40,
                      "line": 3,
                    },
                  },
                  "value": "void",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 10,
                    "line": 4,
                  },
                  "start": {
                    "column": 9,
                    "line": 4,
                  },
                },
                "value": "x",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 4,
                    },
                    "start": {
                      "column": 14,
                      "line": 4,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 10,
                    "line": 5,
                  },
                  "start": {
                    "column": 9,
                    "line": 5,
                  },
                },
                "value": "y",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 5,
                    },
                    "start": {
                      "column": 14,
                      "line": 5,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
        ],
      },
    },
    {
      "contract": {
        "position": {
          "end": {
            "column": 14,
            "line": 7,
          },
          "start": {
            "column": 9,
            "line": 7,
          },
        },
        "value": "Point",
      },
      "for": {
        "position": {
          "end": {
            "column": 26,
            "line": 7,
          },
          "start": {
            "column": 19,
            "line": 7,
          },
        },
        "value": "Point3D",
      },
      "kind": "ContractFulfillment",
      "members": [
        {
          "body": [
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 13,
                        "line": 9,
                      },
                      "start": {
                        "column": 9,
                        "line": 9,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 15,
                        "line": 9,
                      },
                      "start": {
                        "column": 14,
                        "line": 9,
                      },
                    },
                    "value": "x",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 9,
                    },
                    "start": {
                      "column": 18,
                      "line": 9,
                    },
                  },
                  "value": "x",
                },
              },
            },
            {
              "assigne": {
                "computed": false,
                "kind": "MemberExpr",
                "object": {
                  "kind": "SelfKeyword",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 13,
                        "line": 10,
                      },
                      "start": {
                        "column": 9,
                        "line": 10,
                      },
                    },
                    "value": "self",
                  },
                },
                "property": {
                  "kind": "Identifier",
                  "symbol": {
                    "position": {
                      "end": {
                        "column": 15,
                        "line": 10,
                      },
                      "start": {
                        "column": 14,
                        "line": 10,
                      },
                    },
                    "value": "y",
                  },
                },
              },
              "kind": "AssignmentExpr",
              "value": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 10,
                    },
                    "start": {
                      "column": 18,
                      "line": 10,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": false,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 16,
                  "line": 8,
                },
                "start": {
                  "column": 8,
                  "line": 8,
                },
              },
              "value": "setPoint",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 8,
                    },
                    "start": {
                      "column": 17,
                      "line": 8,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 8,
                    },
                    "start": {
                      "column": 23,
                      "line": 8,
                    },
                  },
                  "value": "x",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 31,
                        "line": 8,
                      },
                      "start": {
                        "column": 25,
                        "line": 8,
                      },
                    },
                    "value": "number",
                  },
                },
              },
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 34,
                      "line": 8,
                    },
                    "start": {
                      "column": 33,
                      "line": 8,
                    },
                  },
                  "value": "y",
                },
                "type": {
                  "isNominal": false,
                  "kind": "PrimitiveType",
                  "name": {
                    "position": {
                      "end": {
                        "column": 41,
                        "line": 8,
                      },
                      "start": {
                        "column": 35,
                        "line": 8,
                      },
                    },
                    "value": "number",
                  },
                },
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 50,
                    "line": 8,
                  },
                  "start": {
                    "column": 46,
                    "line": 8,
                  },
                },
                "value": "void",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 12,
                    },
                    "start": {
                      "column": 9,
                      "line": 12,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 15,
                      "line": 12,
                    },
                    "start": {
                      "column": 14,
                      "line": 12,
                    },
                  },
                  "value": "x",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 10,
                  "line": 11,
                },
                "start": {
                  "column": 9,
                  "line": 11,
                },
              },
              "value": "x",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 15,
                      "line": 11,
                    },
                    "start": {
                      "column": 11,
                      "line": 11,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 26,
                    "line": 11,
                  },
                  "start": {
                    "column": 20,
                    "line": 11,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
        {
          "body": [
            {
              "computed": false,
              "kind": "MemberExpr",
              "object": {
                "kind": "SelfKeyword",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 14,
                    },
                    "start": {
                      "column": 9,
                      "line": 14,
                    },
                  },
                  "value": "self",
                },
              },
              "property": {
                "kind": "Identifier",
                "symbol": {
                  "position": {
                    "end": {
                      "column": 15,
                      "line": 14,
                    },
                    "start": {
                      "column": 14,
                      "line": 14,
                    },
                  },
                  "value": "y",
                },
              },
            },
          ],
          "kind": "FunctionDeclaration",
          "signature": {
            "meta": {
              "isAsync": false,
              "isConstructor": false,
              "isGetter": true,
              "isMethod": true,
              "isStatic": false,
            },
            "name": {
              "position": {
                "end": {
                  "column": 10,
                  "line": 13,
                },
                "start": {
                  "column": 9,
                  "line": 13,
                },
              },
              "value": "y",
            },
            "parameters": [
              {
                "kind": "FunctionParam",
                "name": {
                  "position": {
                    "end": {
                      "column": 15,
                      "line": 13,
                    },
                    "start": {
                      "column": 11,
                      "line": 13,
                    },
                  },
                  "value": "self",
                },
                "type": undefined,
              },
            ],
            "returnType": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 26,
                    "line": 13,
                  },
                  "start": {
                    "column": 20,
                    "line": 13,
                  },
                },
                "value": "number",
              },
            },
            "typeParameters": undefined,
          },
        },
      ],
      "typeArgs": undefined,
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Contracts should parse contract with indented body 1`] = `
{
  "body": [
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 11,
                "line": 2,
              },
              "start": {
                "column": 6,
                "line": 2,
              },
            },
            "value": "Point",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 11,
              "line": 2,
            },
            "start": {
              "column": 6,
              "line": 2,
            },
          },
          "value": "Point",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "ContractType",
        "members": [
          {
            "isNominal": false,
            "kind": "FunctionType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": false,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 16,
                    "line": 3,
                  },
                  "start": {
                    "column": 8,
                    "line": 3,
                  },
                },
                "value": "setPoint",
              },
              "parameters": [
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 18,
                        "line": 3,
                      },
                      "start": {
                        "column": 17,
                        "line": 3,
                      },
                    },
                    "value": "x",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 25,
                          "line": 3,
                        },
                        "start": {
                          "column": 19,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 28,
                        "line": 3,
                      },
                      "start": {
                        "column": 27,
                        "line": 3,
                      },
                    },
                    "value": "y",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 35,
                          "line": 3,
                        },
                        "start": {
                          "column": 29,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
              ],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 44,
                      "line": 3,
                    },
                    "start": {
                      "column": 40,
                      "line": 3,
                    },
                  },
                  "value": "void",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 10,
                    "line": 4,
                  },
                  "start": {
                    "column": 9,
                    "line": 4,
                  },
                },
                "value": "x",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 4,
                    },
                    "start": {
                      "column": 14,
                      "line": 4,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 10,
                    "line": 5,
                  },
                  "start": {
                    "column": 9,
                    "line": 5,
                  },
                },
                "value": "y",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 5,
                    },
                    "start": {
                      "column": 14,
                      "line": 5,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
        ],
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Contracts should parse contracts 1`] = `
{
  "body": [
    {
      "isNominal": true,
      "kind": "TypeDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 19,
                "line": 2,
              },
              "start": {
                "column": 14,
                "line": 2,
              },
            },
            "value": "Point",
          },
        },
        "isNominal": true,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "start": {
              "column": 14,
              "line": 2,
            },
          },
          "value": "Point",
        },
      },
      "type": {
        "isNominal": true,
        "kind": "ContractType",
        "members": [
          {
            "isNominal": false,
            "kind": "FunctionType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": false,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 24,
                    "line": 3,
                  },
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "value": "setPoint",
              },
              "parameters": [
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 26,
                        "line": 3,
                      },
                      "start": {
                        "column": 25,
                        "line": 3,
                      },
                    },
                    "value": "x",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 33,
                          "line": 3,
                        },
                        "start": {
                          "column": 27,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
                {
                  "kind": "FunctionParam",
                  "name": {
                    "position": {
                      "end": {
                        "column": 36,
                        "line": 3,
                      },
                      "start": {
                        "column": 35,
                        "line": 3,
                      },
                    },
                    "value": "y",
                  },
                  "type": {
                    "isNominal": false,
                    "kind": "PrimitiveType",
                    "name": {
                      "position": {
                        "end": {
                          "column": 43,
                          "line": 3,
                        },
                        "start": {
                          "column": 37,
                          "line": 3,
                        },
                      },
                      "value": "number",
                    },
                  },
                },
              ],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 52,
                      "line": 3,
                    },
                    "start": {
                      "column": 48,
                      "line": 3,
                    },
                  },
                  "value": "void",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 4,
                  },
                  "start": {
                    "column": 17,
                    "line": 4,
                  },
                },
                "value": "x",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 28,
                      "line": 4,
                    },
                    "start": {
                      "column": 22,
                      "line": 4,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
          {
            "isNominal": false,
            "kind": "GetterType",
            "signature": {
              "meta": {
                "isAsync": false,
                "isConstructor": false,
                "isGetter": true,
                "isMethod": false,
                "isStatic": false,
              },
              "name": {
                "position": {
                  "end": {
                    "column": 18,
                    "line": 5,
                  },
                  "start": {
                    "column": 17,
                    "line": 5,
                  },
                },
                "value": "y",
              },
              "parameters": [],
              "returnType": {
                "isNominal": false,
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 28,
                      "line": 5,
                    },
                    "start": {
                      "column": 22,
                      "line": 5,
                    },
                  },
                  "value": "number",
                },
              },
              "typeParameters": undefined,
            },
          },
        ],
      },
    },
  ],
  "kind": "Program",
}
`;
